Fixed spacing and sponsor page

--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -4421,6 +4421,7 @@ input[type="button"].btn-block {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 1rem 1rem;
 }
 
 .navbar > .container,
